# surehub-api

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml  docs.yml
docs/: export_openapi.py
surehub_api/: main.py
surehub_api/entities/: custom.py  openapi.py
surehub_api/routers/: dashboard.py  devices.py  households.py  pets.py
surehub_api/services/: auth.py  dashboard.py  devices.py  households.py  pets.py  timeline.py
tests/: test_main.py  test_routes.py
